test: add vocab & stem-matching test suite (78 tests); fix 277 dupes + 260 verbose prefixes in vocab

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build:firefox": "wxt build -b firefox",
     "zip": "wxt zip",
     "zip:firefox": "wxt zip -b firefox",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "compile": "tsc --noEmit",
     "postinstall": "wxt prepare"
   },
@@ -22,6 +24,7 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "typescript": "^5.3.3",
     "vite": "^5.1.4",
+    "vitest": "^4.0.18",
     "wxt": "^0.17.10"
   }
 }
