feat: v0.1.3 — multilingual popup, landing page demo switcher, icon refresh, vocab quality fixes
- Popup language selector is now a dropdown (EN / 中文 / 日本語)
- Popup word counts derived dynamically from topik-vocab.json (no hardcoded numbers)
- Landing page: EN/中文/日本語 tab switcher with live postMessage to demo iframe
- Landing page: hero pill cleanup (removed 'Any Korean site'); language pill kept
- demo-x.html: full TRANS lookup table + setLang() + message listener
- ru annotation gap: padding-bottom 2px on rt elements
- Icon: purple gradient #7c3aed→#a78bfa, radius 26, PNGs regenerated
- Vocab: 열대야 fixed ('tropical night'); 우리말 removed (6,065 → 6,064 entries)
- scripts/update-vocab-counts.mjs: patches docs/index.html counts from JSON
- package.json: added update-counts and generate-icons scripts
- Stripped hardcoded counts from README, DEVELOPMENT, RELEASE_NOTES, tests

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wordwise-korean",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Browser extension that adds Kindle Word Wise style annotations for Korean learning",
   "type": "module",
   "private": true,
@@ -13,6 +13,8 @@
     "zip:firefox": "wxt zip -b firefox",
     "test": "vitest run",
     "test:watch": "vitest",
+    "update-counts": "node scripts/update-vocab-counts.mjs",
+    "generate-icons": "node scripts/generate-icons.mjs",
     "compile": "tsc --noEmit",
     "postinstall": "wxt prepare"
   },
