--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:watch": "vitest",
     "update-counts": "node scripts/update-vocab-counts.mjs",
     "generate-icons": "node scripts/generate-icons.mjs",
+    "screenshot": "node scripts/screenshot.mjs",
     "compile": "tsc --noEmit",
     "postinstall": "wxt prepare"
   },
@@ -25,6 +26,7 @@
     "@resvg/resvg-js": "^2.6.2",
     "@types/chrome": "^0.0.260",
     "@vitejs/plugin-vue": "^5.0.4",
+    "puppeteer": "^24.37.5",
     "typescript": "^5.3.3",
     "vite": "^5.1.4",
     "vitest": "^4.0.18",
